Committing TCM Project - Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p3.xhtml
@@ -8,7 +8,7 @@
 
     <div class="Container100 TextAlCenter">
         <div class="Container50 Responsive100 Fleft">
-            <h3 class="TexAlCenter StepsQuestionsFS StepsQuestionsFSpg3">
+            <h3 class="StepsQuestionsFS StepsQuestionsFSpg3">
                 Which of the following best reflects your objectives for this investment?
             </h3>
             <div class="Container100">
