committing TCM Project - Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -11,7 +11,7 @@
         <div class="EmptyBox20"></div>
 
         <div class="TexAlCenter">
-            <div>
+            <div class="PortfolioCreationFields">
             <div class="mobileFullWidth"><h3 class="formFS" > I plan on investing </h3></div>
             <pe:inputNumber id="initialIid"
                             styleClass="invInputText input_investwid1 amountBRmobileSupport mobileFullWidthinput"
