--- a/tcm/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -11,7 +11,7 @@
 
     <ui:define name="content">
         <div class="layout-portlets-box">
-            <!-- Messages/Alets -->
+            <!-- Messages/Alerts -->
             <div class="Container50 Responsive50">
                 <div class="ContainerIndent PaddingTopBottomNone">
                     <div class="Container100">
